# telegram-bot-views

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: accounts_manager.py  views_manager.py
src/admin/: api.py  create_admin.py  owner_resource.py  resources.py  routes.py  start.py
src/views_service/: accounts_manager.py  db.py  main.py  models.py  tasks.py  views_manager.py
tests/: conftest.py  manager_test.py  views_manager_test.py
