[tool.poetry]
name = "viewsbot3"
version = "0.1.0"
description = ""
authors = ["0xshodan <hngdean@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opentele = "^1.15.1"
pytest-asyncio = "^0.21.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
