[tool.poetry]
name = "viewsbot3"
version = "0.1.0"
description = ""
authors = ["0xshodan <hngdean@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opentele = "^1.15.1"
pytest-asyncio = "^0.21.0"
celery = {extras = ["redis"], version = "^5.2.7"}
fastapi-admin = {git = "https://github.com/0xshodan/fastapi-admin.git"}
pysocks = "^1.7.1"
python-multipart = "^0.0.6"
pyunpack = "^0.3"
patool = "^1.12"
aiohttp = "^3.8.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
